--- a/css/blog.css
+++ b/css/blog.css
@@ -438,6 +438,8 @@ main#content {
     height: 480px;
     margin-top: 100px;
     width: 100%;
+background-position: top center;
+background-size: cover;
 }
 main#content .container{
     height: 480px;
